--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svg-sprite": "^1.3.6",
     "gulp-uglify": "^1.5.1",
-    "gulpicon": "^0.1.2",
     "run-sequence": "^1.2.2",
     "webpack-stream": "^3.1.0"
   }
